# constrained-agent-harness

./: .env.example  .gitignore  AGENTS.md  LICENSE  MASTER_PROMPT.md  Makefile  README.md  alembic.ini  pyproject.toml
.hermes/codex-prompts/: phase2-batch-1a.md  phase2-batch-1b.md  phase2-batch-1c.md  phase2-batch-2.md  phase2-batch-3.md  phase2-batch-4.md  phase3-batch-1.md  phase3-batch-2.md  phase3-batch-3.md  phase4-batch-1.md  phase4-batch-2.md  phase4-batch-3.md
benchmarks/payment_webhook/: benchmark_manifest.yaml  goal.yaml
benchmarks/payment_webhook/protected_tests/: test_webhook_hidden.py
benchmarks/payment_webhook/reference_solution/: README.md  pyproject.toml
benchmarks/payment_webhook/reference_solution/src/: app.py  database.py  main.py
benchmarks/payment_webhook/reference_solution/tests/: test_webhook.py
benchmarks/payment_webhook/source_repo/: .gitignore  README.md  pyproject.toml
benchmarks/payment_webhook/source_repo/src/: app.py  database.py  models.py
scripts/: iterate.sh  run_smoke_test.py  validate_benchmark.py
src/constrained_agent/: __init__.py  errors.py  logging.py  settings.py
src/constrained_agent/agents/: __init__.py  google_adk.py  prompts.py  protocol.py  replay.py  scripted.py
src/constrained_agent/artifacts/: __init__.py  hashing.py  manifest.py  store.py
src/constrained_agent/cli/: __init__.py  _common.py  app.py  benchmark.py  doctor.py  experiment.py  inspect.py  report.py
src/constrained_agent/context/: __init__.py  builder.py  failure_summary.py  repository_map.py  token_budget.py
src/constrained_agent/controller/: __init__.py  controller.py  state_machine.py  transition_policy.py
src/constrained_agent/domain/: __init__.py  approvals.py  budgets.py  candidates.py  contracts.py  evaluations.py  events.py  evidence.py  runs.py
src/constrained_agent/evaluators/: __init__.py  command.py  diff_size.py  pipeline.py  protocol.py
src/constrained_agent/persistence/: __init__.py  database.py  models.py  repositories.py
src/constrained_agent/persistence/migrations/: env.py
src/constrained_agent/persistence/migrations/versions/: 0001_initial_schema.py
src/constrained_agent/policy/: __init__.py  approvals.py  commands.py  dependencies.py  engine.py  paths.py
src/constrained_agent/reporting/: __init__.py  experiment_report.py  metrics.py  run_report.py
src/constrained_agent/repository/: __init__.py  git_store.py  protocol.py  worktree.py
src/constrained_agent/sandbox/: __init__.py  docker.py  fake.py  protocol.py
tests/end_to_end/: test_policy_enforcement.py  test_scripted_run.py
tests/integration/: test_controller.py
tests/unit/: test_adk_adapter.py  test_agents.py  test_benchmark.py  test_context_builder.py  test_domain_evaluations_and_budgets.py  test_domain_models.py  test_evaluators.py  test_policy_engine.py  test_repository_and_persistence.py  test_sandbox.py  test_state_machine.py
