[project]
name = "constrained-agent-harness"
version = "0.1.0"
description = "A reference harness for running coding agents as bounded, verifiable search over repository states."
requires-python = ">=3.13"
readme = "README.md"
license = { text = "Apache-2.0" }

authors = [
    { name = "constrained-agent-harness contributors" },
]

dependencies = [
    "google-adk>=0.2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "tenacity>=8.0",
    "docker>=7.0",
]

[project.scripts]
cah = "constrained_agent.cli.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "bandit>=1.7",
    "semgrep>=1.60",
    "pre-commit>=3.0",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.25",
    "types-pyyaml>=6.0",
    "types-python-dateutil>=2.9",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "live_model: tests that require a live Gemini API call",
    "slow: tests that are slow to run",
    "docker: tests that require Docker",
]

[tool.coverage.run]
source = ["constrained_agent"]
branch = true

[tool.coverage.report]
fail_under = 85
exclude_also = [
    "def __repr__",
    "def __str__",
    "if TYPE_CHECKING",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.cah]
runtime_dir = ".cah"
default_model = "gemini-3.5-flash"
default_sandbox_image = "python:3.13-slim"
database_url = "sqlite:///.cah/cah.db"

[tool.hatch.build.targets.wheel]
packages = ["src/constrained_agent"]

[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"
