[project]
name = "payment-webhook"
version = "0.1.0"
description = "Payment webhook benchmark reference solution"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "sqlalchemy",
    "aiosqlite",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
